# horrocubes-plutus-smartcontracts

./: README.md  cabal.project  hie.yaml  horrocubes.cabal
src/Enigma/: OffChain.hs  OnChain.hs  Test.hs
