Cabal-Version:      2.4
Name:               plutus-enigma-cube
Version:            0.1.0.0
Author:              Angel Castillo
Maintainer:          angel.castillob@protonmail.com
Build-Type:          Simple
Copyright:           © 2021 Angel Castillo
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Enigma.Test,
                       Enigma.OffChain,
                       Enigma.OnChain
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
                     , serialise -any
                     , newtype-generics -any
                     , tagged -any
                     , bytestring -any
                     , base16-bytestring

  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise